# thelio-io

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  test.sh  update.sh
scripts/: lvfs.sh
tester/: Cargo.toml  tester.sh
tester/res/: firmware.uf2
tester/src/: main.rs
