[package]
name = "thelio-io-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "1.4", default-features = false, features = ["linux-shared-hidraw"] }
proc-mounts = "0.3.0"
system76_ectool = { git = "https://github.com/system76/ec", branch = "thelio-io-2" }
sysfs-class = "0.1.3"
termion = "2.0.1"
